[package]
name = "tiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
#imageproc = "*"
glam = { version = "*", features = ["serde"]}
serde = { version = "*", features = ["derive"]}
serde_json = "*"
reqwest = { version = "*", features = [ "json" ]}
tokio = { version = "*", features = [ "full" ]}
bytes = "*"
num = "*"