[package]
name = "tiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
glam = { version = "*", features = ["serde"]}
reqwest = { version = "*", features = [ "json", "blocking" ]}
tokio = { version = "*", features = [ "full" ]}
num = "*"
regex = "*"
warp = "*"
serde = { version = "*", features = ["derive"]}
serde_json = { version = "*" }
serde_qs = { version = "*", features = [ "warp" ]}
urlencoding = "*"